# nemo-factory

./: Cargo.toml
.github/workflows/: build.yml  ci.yml
apps/orchestrator/: Cargo.toml
apps/orchestrator/src/: main.rs
crates/artifacts/: Cargo.toml
crates/artifacts/ src/: graph.rs  guard.rs  lib.rs  renderer.rs  report.rs  webview.rs
crates/ci_runner/src/: classifier.rs  lib.rs  result.rs  runner.rs
crates/contracts/: Cargo.toml
crates/contracts/src/: lib.rs  llm_contract.rs  llm_step.rs  validator.rs
crates/core/src/: dag.rs  evolution_engine.rs  healing_loop.rs  lib.rs  limiter.rs  orchestrator.rs  state.rs  strategy.rs  task.rs
crates/cross_intel/: Cargo.toml
crates/cross_intel/src/: adapter.rs  capability.rs  comparator.rs  evaluator.rs  extractor.rs  integrator.rs  lib.rs  normalizer.rs  registry.rs  selector.rs  validator.rs
crates/dag_compiler/: Cargo.toml
crates/dag_compiler/src/: compiler.rs  evolution.rs  graph.rs  lib.rs  lock.rs  node.rs  scorer.rs
crates/execution_bus/src/: bus.rs  context.rs  dispatcher.rs  guard.rs  router.rs
crates/factory_core/src/: evaluator.rs  evolution.rs  factory.rs  gate.rs  planner.rs
crates/hardening/src/: audit.rs  chaos.rs  concurrency.rs  determinism.rs  failure_injector.rs  fs_guard.rs  invariants.rs  resource_guard.rs  sandbox.rs  supervisor.rs
crates/llm_binding/src/: client.rs  compiler.rs  contract.rs  guard.rs  lib.rs  schema.rs  validator.rs
crates/log_analyzer/: Cargo.toml
crates/log_analyzer/src/: classifier.rs  lib.rs  parser.rs
crates/meta_arch/src/: analyzer.rs  commit.rs  controller.rs  history.rs  metrics.rs  planner.rs  proposal.rs  rollback.rs  simulator.rs  validator.rs
crates/multi_project/: Cargo.toml
crates/multi_project/src/: filter.rs  knowledge.rs  lib.rs  pattern.rs  registry.rs  scorer.rs  transfer.rs
crates/repair_engine/: Cargo.toml
crates/repair_engine/src/: lib.rs  limiter.rs  loop.rs  patch_builder.rs  strategy.rs
crates/self_evolution/src/: anomaly.rs  gate.rs  lib.rs  log_collector.rs  parser.rs  repair.rs  runner.rs  (+3 more)
scripts/: run_matrix.sh
(+7 files in other folders)
