[workspace]
members = [
    "crates/core",
    "crates/contracts",
    "crates/fs_engine",
    "crates/ci_runner",
    "apps/orchestrator",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
