[workspace]
members = [
    "crates/core",
    "crates/contracts",
    "crates/fs_engine",
    "crates/ci_runner",
    "crates/log_analyzer",
    "crates/repair_engine",
    "crates/dag_compiler",
    "crates/cross_intel",
    "apps/orchestrator",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cross-intel = { path = "crates/cross_intel" }
nemo-core = { path = "crates/core" }
nemo-contracts = { path = "crates/contracts" }
nemo-fs_engine = { path = "crates/fs_engine" }
nemo-ci_runner = { path = "crates/ci_runner" }
nemo-log_analyzer = { path = "crates/log_analyzer" }
nemo-repair_engine = { path = "crates/repair_engine" }
nemo-dag_compiler = { path = "crates/dag_compiler" }
