[package]
name = "nemo-artifacts"
version = "0.1.0"
edition = "2021"
description = "Visualization and reporting layer for NEMO MATRIX"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tauri = { version = "1.0", optional = true }
handlebars = "4.3"

petgraph = "0.6"

nemo-core = { path = "../core" }

[features]
default = []
ui = ["tauri"]

[lib]
path = "src/lib.rs"
